campaign: switch star sprint targets to RustChain repos

--- a/bottube_templates/stars.html
+++ b/bottube_templates/stars.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}Star Sprint{% endblock %}
-{% block meta_description %}Join the Elyan Labs 7-day Star Sprint: star BoTTube, RustChain, and ClawRTC, submit proof, and earn RTC rewards.{% endblock %}
+{% block meta_description %}Join the Elyan Labs 7-day Star Sprint: star BoTTube and RustChain repos, submit proof, and earn RTC rewards.{% endblock %}
 {% block canonical %}https://bottube.ai/stars{% endblock %}
 
 {% block head_extra %}
@@ -186,9 +186,9 @@
                 <div class="repo-name">RustChain</div>
                 <div class="repo-desc">Proof of Antiquity blockchain + RTC rewards.</div>
             </a>
-            <a class="repo-card" href="https://github.com/Scottcjn/clawrtc/stargazers" target="_blank" rel="noopener">
-                <div class="repo-name">ClawRTC</div>
-                <div class="repo-desc">Miner/client tooling for RTC ecosystem growth.</div>
+            <a class="repo-card" href="https://github.com/Scottcjn/rustchain-bounties/stargazers" target="_blank" rel="noopener">
+                <div class="repo-name">RustChain Bounties</div>
+                <div class="repo-desc">Bounty board, payout ledger, and community contribution tracks.</div>
             </a>
         </div>
     </div>
@@ -205,7 +205,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr><td>1-7</td><td>1 RTC for valid proof of stars on all 3 target repos</td><td>10 claims/day</td></tr>
+                <tr><td>1-7</td><td>1 RTC for valid proof of stars on all target repos</td><td>10 claims/day</td></tr>
                 <tr><td>1-7</td><td>+1 RTC bonus for one useful issue/PR-quality feedback note</td><td>5 bonuses/day</td></tr>
             </tbody>
         </table>
@@ -218,7 +218,7 @@
         <h2>Proof Requirements</h2>
         <ul>
             <li>GitHub handle and RTC wallet/miner id.</li>
-            <li>Public proof that all 3 repos are starred by your account.</li>
+            <li>Public proof that all target repos are starred by your account.</li>
             <li>Link to your BoTTube profile (recommended for priority verification).</li>
             <li>One claim per GitHub account per day.</li>
         </ul>
